--- a/js-app.html
+++ b/js-app.html
@@ -8312,12 +8312,8 @@ MJ 이정우 팀장
 
             var dS = yS + mS_str + String(d).padStart(2, '0');
 
-            // [지시사항 2] 오늘부터 / 전체 필터에 따라 날짜 박스 노출 결정
-            // [수정] 자리를 건너뛰지 않고 빈 칸으로 채워 그리드 구조(4~5주) 유지
-            if (tR === 'today' && dS < tS) {
-                grid.insertAdjacentHTML('beforeend', '<div class="cd e"></div>');
-                continue;
-            }
+            // [수정] 과거 날짜도 박스와 숫자는 항상 보이게 함. 다만 지시대로 테두리/바탕색/점만 숨김.
+            var isPastToday = (tR === 'today' && dS < tS);
 
             var items = counts[dS] || {};
             var has = (items['입찰'] > 0 || items['추천'] > 0 || items['변경'] > 0);
@@ -8326,20 +8322,24 @@ MJ 이정우 팀장
 
             // [지시사항 3] 상단바 상태(fS) 필터에 따라 점(Dot) 노출 결정
             var dotH = '';
-            var sOrder = ['입찰', '추천', '변경'];
-            var colors = { '입찰': '#4f46e5', '추천': '#fb923c', '변경': '#1f2937' };
+            // 오늘부터 모드에서 과거 날짜는 점을 아예 생성 안 함
+            if (!isPastToday) {
+                var sOrder = ['입찰', '추천', '변경'];
+                var colors = { '입찰': '#4f46e5', '추천': '#fb923c', '변경': '#1f2937' };
 
-            sOrder.forEach(function (s) {
-                if (fS.indexOf(s) === -1) return;
-                var c = items[s] || 0;
-                for (var j = 0; j < c; j++) {
-                    dotH += '<div class="dc" style="background:' + colors[s] + '"></div>';
-                }
-            });
+                sOrder.forEach(function (s) {
+                    if (fS.indexOf(s) === -1) return;
+                    var c = items[s] || 0;
+                    for (var j = 0; j < c; j++) {
+                        dotH += '<div class="dc" style="background:' + colors[s] + '"></div>';
+                    }
+                });
+            }
 
             var cls = 'cd';
             if (isT) cls += ' t';
-            if (has) {
+            if (has && !isPastToday) {
+                // 오늘부터 모드에서 과거 날짜는 바탕색/테두리 클래스(fh/ph)를 안 붙임
                 if (dS >= tS) cls += ' fh'; // 오늘 포함 미래: 초록
                 else cls += ' ph';        // 과거 (전체 모드일 때만 도달 가능)
             }
