UI Overhaul v3.3: Shape-based indicators, overlapping logic, and navigation summary

--- a/css.html
+++ b/css.html
@@ -1879,17 +1879,114 @@
   .dcs {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    flex-wrap: nowrap;
+    /* 겹침을 위해 nowrap */
     gap: 0;
+    margin-top: 2px;
   }
 
+  /* 동그라미 (물건 1개 = 동그라미 1개) */
   .dc {
-    width: 15px;
-    height: 15px;
+    width: 14px;
+    height: 14px;
     border-radius: 50%;
-    border: 2px solid #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+    /* 기본 동그라미 */
+    border: 1px solid #fff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     flex-shrink: 0;
+    margin-left: -5px;
+    /* 겹침 효과 */
+    position: relative;
+    transition: transform 0.1s;
+  }
+
+  .dc:first-child {
+    margin-left: 0;
+  }
+
+  /* Z-index 로직: 왼쪽이 위로 오도록 (역순 배치 필요할 수 있음, 여기서는 단순 처리) */
+  .dc:nth-child(1) {
+    z-index: 10;
+  }
+
+  .dc:nth-child(2) {
+    z-index: 9;
+  }
+
+  .dc:nth-child(3) {
+    z-index: 8;
+  }
+
+  .dc:nth-child(4) {
+    z-index: 7;
+  }
+
+  .dc:nth-child(5) {
+    z-index: 6;
+  }
+
+  .dc:nth-child(6) {
+    z-index: 5;
+  }
+
+  /* 형태 다변화 */
+  .dc.tri {
+    border-radius: 0;
+    background: transparent !important;
+    border: none;
+    box-shadow: none;
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 13px solid currentColor;
+    /* 색상은 인라인 스타일로 결정 */
+    filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.3));
+  }
+
+  .dc.sq {
+    border-radius: 2px;
+    /* 네모는 라운드 거의 없음 */
+  }
+
+  /* 네비게이션 월별 요약 지표 */
+  .cal-ms {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    margin-top: 4px;
+  }
+
+  .ms-it {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 0.75rem;
+    font-weight: 800;
+    color: #4b5563;
+  }
+
+  .ms-sh {
+    width: 10px;
+    height: 10px;
+    flex-shrink: 0;
+  }
+
+  .ms-sh.cir {
+    border-radius: 50%;
+  }
+
+  .ms-sh.tri {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid currentColor;
+  }
+
+  .ms-sh.sq {
+    border-radius: 1px;
   }
 
   /* 3. 리스트 카드 */
