--- a/index.html
+++ b/index.html
@@ -249,12 +249,9 @@
                                 <button class="rb on" id="tT" onclick="setR('today')">오늘부터</button>
                                 <button class="rb" id="tA" onclick="setR('all')">전체</button>
                             </div>
-                            <button class="sp bid pointer-events-auto" id="btn-top-bid" onclick="togF('입찰')"><span
-                                    id="cB">0</span>입찰</button>
-                            <button class="sp rec pointer-events-auto" id="btn-top-rec" onclick="togF('추천')"><span
-                                    id="cR">0</span>추천</button>
-                            <button class="sp chg pointer-events-auto" id="btn-top-chg" onclick="togF('변경')"><span
-                                    id="cC">0</span>변경</button>
+                            <button class="sp bid pointer-events-auto" id="btn-top-bid" onclick="togF('입찰')">입찰</button>
+                            <button class="sp rec pointer-events-auto" id="btn-top-rec" onclick="togF('추천')">추천</button>
+                            <button class="sp chg pointer-events-auto" id="btn-top-chg" onclick="togF('변경')">변경</button>
                         </div>
                     </div>
 
@@ -268,7 +265,10 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                             d="M15 19l-7-7 7-7" />
                                     </svg></button>
-                                <div class="cal-t" id="cT"></div>
+                                <div class="flex-col">
+                                    <div class="cal-t" id="cT"></div>
+                                    <div class="cal-ms" id="cMS"></div>
+                                </div>
                                 <button class="cnb" onclick="chMo(1)"><svg width="16" height="16" fill="none"
                                         stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
