UI Refinements v3.4: Capsule summary, structured hints, conditional overlapping, and message updates

--- a/css.html
+++ b/css.html
@@ -1725,7 +1725,16 @@
   .cal-c {
     display: flex;
     align-items: center;
-    gap: 14px;
+    justify-content: center;
+    gap: 8px;
+    /* 화살표와 중앙 텍스트 간격 */
+  }
+
+  .flex-col-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .cnb {
@@ -1759,28 +1768,55 @@
     top: 50%;
     transform: translateY(-50%);
     display: flex;
-    gap: 3px;
+    align-items: flex-start;
+    gap: 6px;
+  }
+
+  /* 힌트 개별 아이템 (아이콘 + 숫자 하단) */
+  .hi-it {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    min-width: 14px;
+  }
+
+  .hi-v {
+    font-size: 10px;
+    font-weight: 800;
+    color: #4b5563;
+    line-height: 1;
   }
 
   .cal-d.l {
-    left: 10px;
+    left: 8px;
   }
 
   .cal-d.r {
-    right: 10px;
+    right: 8px;
   }
 
   .cdot {
-    width: 20px;
-    height: 20px;
+    width: 14px;
+    height: 14px;
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-    font-weight: 800;
-    color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+    display: block;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+  }
+
+  .cdot.tri {
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 13px solid currentColor;
+    border-radius: 0;
+    box-shadow: none;
+    filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.2));
+  }
+
+  .cdot.sq {
+    border-radius: 2px;
   }
 
   .cal-body {
@@ -1881,8 +1917,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-    /* 겹침을 위해 nowrap */
-    gap: 0;
+    gap: 2px;
     margin-top: 2px;
   }
 
@@ -1895,14 +1930,18 @@
     border: 1px solid #fff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     flex-shrink: 0;
-    margin-left: -5px;
-    /* 겹침 효과 */
     position: relative;
     transition: transform 0.1s;
+    margin-left: 0;
+  }
+
+  /* 동일 상태일 때만 겹침 발생 (JS에서 클래스 부여) */
+  .dc.ovl {
+    margin-left: -5px;
   }
 
   .dc:first-child {
-    margin-left: 0;
+    margin-left: 0 !important;
   }
 
   /* Z-index 로직: 왼쪽이 위로 오도록 (역순 배치 필요할 수 있음, 여기서는 단순 처리) */
@@ -1950,19 +1989,25 @@
     /* 네모는 라운드 거의 없음 */
   }
 
-  /* 네비게이션 월별 요약 지표 */
+  /* 네비게이션 월별 요약 지표 (캡슐 디자인) */
   .cal-ms {
     display: flex;
     justify-content: center;
-    gap: 12px;
-    margin-top: 4px;
+    align-items: center;
+    gap: 10px;
+    margin-top: 5px;
+    background: #f8fafc;
+    border: 1px solid #e2e8f0;
+    padding: 3px 12px;
+    border-radius: 999px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.03);
   }
 
   .ms-it {
     display: flex;
     align-items: center;
     gap: 4px;
-    font-size: 0.75rem;
+    font-size: 0.72rem;
     font-weight: 800;
     color: #4b5563;
   }
