UI Refinements v3.5: Selection lock, date box aesthetics, enlarged hints, and simple summary

--- a/css.html
+++ b/css.html
@@ -1797,26 +1797,48 @@
   }
 
   .cdot {
-    width: 14px;
-    height: 14px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
-    display: block;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    font-weight: 900;
+    color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .25);
+    line-height: 1;
+    position: relative;
   }
 
   .cdot.tri {
     width: 0;
     height: 0;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-bottom: 13px solid currentColor;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 22px solid currentColor;
     border-radius: 0;
     box-shadow: none;
-    filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.2));
+    filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+    background: transparent !important;
+    color: #fff;
+  }
+
+  /* 세모 안의 숫자를 위한 별도 처리 */
+  .cdot.tri::after {
+    content: attr(data-val);
+    position: absolute;
+    top: 6px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 11px;
+    font-weight: 900;
+    color: #fff;
+    z-index: 10;
   }
 
   .cdot.sq {
-    border-radius: 2px;
+    border-radius: 4px;
   }
 
   .cal-body {
@@ -1858,11 +1880,13 @@
     align-items: center;
     min-height: 58px;
     padding: 5px 2px;
-    border-radius: 10px;
+    border-radius: 12px;
     cursor: pointer;
     transition: all .15s;
-    background: #fff;
-    border: 2px solid transparent;
+    background: #ffffff;
+    /* 기본 배경 */
+    border: 1px solid #e2e8f0;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02);
   }
 
   .cd.e {
@@ -1886,17 +1910,15 @@
   }
 
   .cd.fh {
-    background: #f0fdf4 !important;
-    /* 연초록 배경 */
-    border-color: #86efac !important;
-    /* 초록 테두리 */
+    background: #ecfdf5 !important;
+    /* 연초록 배경 (미래) */
+    border-color: #6ee7b7 !important;
   }
 
   .cd.ph {
-    background: #f1f5f9 !important;
-    /* 연회색 배경 */
-    border-color: #d1d5db !important;
-    /* 회색 테두리 */
+    background: #f8fafc !important;
+    /* 연회색 배경 (과거) */
+    border-color: #cbd5e1 !important;
   }
 
   .cd.pe {
@@ -1989,18 +2011,16 @@
     /* 네모는 라운드 거의 없음 */
   }
 
-  /* 네비게이션 월별 요약 지표 (캡슐 디자인) */
+  /* 네비게이션 월별 요약 지표 (심플 텍스트) */
   .cal-ms {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    margin-top: 5px;
-    background: #f8fafc;
-    border: 1px solid #e2e8f0;
-    padding: 3px 12px;
-    border-radius: 999px;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.03);
+    gap: 8px;
+    margin-top: 2px;
+    font-size: 0.72rem;
+    font-weight: 800;
+    color: #64748b;
   }
 
   .ms-it {
