Emergency Fix v3.6: Selection logic restored, perfect centering, sidebar filters aligned, and shrunk hints

--- a/index.html
+++ b/index.html
@@ -245,13 +245,18 @@
                     <!-- 1. 상단바 -->
                     <div class="top-bar">
                         <div class="top-bar-inner">
-                            <div class="rg">
+                            <div class="fg">
                                 <button class="rb on" id="tT" onclick="setR('today')">오늘부터</button>
                                 <button class="rb" id="tA" onclick="setR('all')">전체</button>
                             </div>
-                            <button class="sp bid pointer-events-auto" id="btn-top-bid" onclick="togF('입찰')">입찰</button>
-                            <button class="sp rec pointer-events-auto" id="btn-top-rec" onclick="togF('추천')">추천</button>
-                            <button class="sp chg pointer-events-auto" id="btn-top-chg" onclick="togF('변경')">변경</button>
+                            <div class="fg">
+                                <button class="sp bid pointer-events-auto" id="btn-top-bid"
+                                    onclick="togF('입찰')">입찰</button>
+                                <button class="sp rec pointer-events-auto" id="btn-top-rec"
+                                    onclick="togF('추천')">추천</button>
+                                <button class="sp chg pointer-events-auto" id="btn-top-chg"
+                                    onclick="togF('변경')">변경</button>
+                            </div>
                         </div>
                     </div>
 
