--- a/css.html
+++ b/css.html
@@ -1707,27 +1707,36 @@
   .cal-nav-bar {
     position: sticky;
     top: 44px;
+    /* index.html 헤더 높이 고려 */
     z-index: 35;
     background: #fff;
     border: 1.5px solid #e5e7eb;
     border-radius: 14px 14px 0 0;
+    margin: -1px;
+    height: 72px;
+    /* 높이 고정으로 수직 정렬 정밀 조정 */
+    display: flex;
+    align-items: center;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .06);
   }
 
   .cal-nav-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    padding: 10px 16px;
+    padding: 0 16px;
   }
 
+  /* 화살표와 타이틀 그룹 */
   .cal-c {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 8px;
-    /* 화살표와 중앙 텍스트 간격 */
+    gap: 12px;
+    height: 100%;
   }
 
   .flex-col-center {
@@ -1735,6 +1744,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100%;
+    gap: 3px;
   }
 
   .cnb {
@@ -1756,11 +1767,15 @@
   }
 
   .cal-t {
-    font-size: 1.1rem;
+    font-size: 1.05rem;
     font-weight: 800;
     color: #1f2937;
-    min-width: 100px;
+    min-width: 110px;
     text-align: center;
+    line-height: 1.2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .cal-d {
@@ -1797,16 +1812,16 @@
   }
 
   .cdot {
-    width: 24px;
-    height: 24px;
+    width: 13px;
+    height: 13px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 11px;
+    font-size: 8px;
     font-weight: 900;
     color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .25);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
     line-height: 1;
     position: relative;
   }
@@ -1814,12 +1829,12 @@
   .cdot.tri {
     width: 0;
     height: 0;
-    border-left: 12px solid transparent;
-    border-right: 12px solid transparent;
-    border-bottom: 22px solid currentColor;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 13px solid currentColor;
     border-radius: 0;
     box-shadow: none;
-    filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.15));
     background: transparent !important;
     color: #fff;
   }
@@ -1828,17 +1843,17 @@
   .cdot.tri::after {
     content: attr(data-val);
     position: absolute;
-    top: 6px;
+    top: 4px;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 11px;
+    font-size: 8px;
     font-weight: 900;
     color: #fff;
     z-index: 10;
   }
 
   .cdot.sq {
-    border-radius: 4px;
+    border-radius: 2px;
   }
 
   .cal-body {
@@ -2011,25 +2026,48 @@
     /* 네모는 라운드 거의 없음 */
   }
 
+  .top-bar-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 4px;
+  }
+
+  .fg {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  }
+
   /* 네비게이션 월별 요약 지표 (심플 텍스트) */
   .cal-ms {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 6px;
     margin-top: 2px;
-    font-size: 0.72rem;
+    font-size: 0.68rem;
     font-weight: 800;
-    color: #64748b;
   }
 
   .ms-it {
     display: flex;
     align-items: center;
-    gap: 4px;
-    font-size: 0.72rem;
-    font-weight: 800;
-    color: #4b5563;
+    gap: 1px;
+  }
+
+  /* 요약 텍스트 색상 */
+  .ms-it.bid {
+    color: #4f46e5;
+  }
+
+  .ms-it.rec {
+    color: #fb923c;
+  }
+
+  .ms-it.chg {
+    color: #1f2937;
   }
 
   .ms-sh {
