--- a/css.html
+++ b/css.html
@@ -1707,14 +1707,12 @@
   .cal-nav-bar {
     position: sticky;
     top: 44px;
-    /* index.html 헤더 높이 고려 */
     z-index: 35;
     background: #fff;
     border: 1.5px solid #e5e7eb;
     border-radius: 14px 14px 0 0;
     margin: -1px;
     height: 72px;
-    /* 높이 고정으로 수직 정렬 정밀 조정 */
     display: flex;
     align-items: center;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .06);
@@ -1736,7 +1734,7 @@
     align-items: center;
     justify-content: center;
     gap: 12px;
-    height: 100%;
+    position: relative;
   }
 
   .flex-col-center {
@@ -1744,8 +1742,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    gap: 3px;
+    position: relative;
   }
 
   .cnb {
@@ -1772,7 +1769,10 @@
     color: #1f2937;
     min-width: 110px;
     text-align: center;
-    line-height: 1.2;
+    line-height: normal;
+    /* 상속 영향 제거 */
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2040,13 +2040,18 @@
     gap: 6px;
   }
 
-  /* 네비게이션 월별 요약 지표 (심플 텍스트) */
+  /* 네비게이션 월별 요약 지표 (심플 텍스트 - 위치 독립적 센터링을 위해 절대좌표 활용) */
   .cal-ms {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 6px;
-    margin-top: 2px;
+    white-space: nowrap;
+    gap: 8px;
+    margin-top: 1px;
     font-size: 0.68rem;
     font-weight: 800;
   }
