--- a/js-app.html
+++ b/js-app.html
@@ -8186,6 +8186,10 @@ MJ 이정우 팀장
     var fS = ['입찰', '추천', '변경']; // 활성 필터
     var tR = 'today';    // 범위: 'today'(오늘부터) 또는 'all'(전체)
 
+    // [전역 변수] 오늘 날짜 문자열 (YYMMDD) - rCal과 selD 공용
+    var now_init = new Date();
+    var tS = String(now_init.getFullYear()).slice(-2) + String(now_init.getMonth() + 1).padStart(2, '0') + String(now_init.getDate()).padStart(2, '0');
+
     /**
      * 초기화 및 데이터 로드 후 호출
      */
@@ -8256,8 +8260,7 @@ MJ 이정우 팀장
 
         var yS = String(y).slice(-2);
         var mS_str = String(m + 1).padStart(2, '0');
-        var now = new Date();
-        var tS = String(now.getFullYear()).slice(-2) + String(now.getMonth() + 1).padStart(2, '0') + String(now.getDate()).padStart(2, '0');
+        // tS는 이제 전역 변수를 사용함
 
         // 데이터 요약: 숫자는 오늘부터/전체(tR)에만 반응하고 필터(fS)에는 반응하지 않음
         var counts = {};
@@ -8287,7 +8290,9 @@ MJ 이정우 팀장
         if (msEl) {
             msEl.innerHTML =
                 '<span class="ms-it bid">입찰 ' + (counts_month['입찰'] || 0) + '</span>' +
+                '<span style="width:8px; display:inline-block"></span>' +
                 '<span class="ms-it rec">추천 ' + (counts_month['추천'] || 0) + '</span>' +
+                '<span style="width:8px; display:inline-block"></span>' +
                 '<span class="ms-it chg">변경 ' + (counts_month['변경'] || 0) + '</span>';
         }
 
@@ -8412,9 +8417,12 @@ MJ 이정우 팀장
      * 날짜 선택 (리스트 앵커로 스크롤)
      */
     function selD(d) {
-        // [긴급 복구] 오늘부터 모드에서 진짜 과거인 경우만 차단 (dS < tS 비교와 일치해야 함)
-        // 빈 박스(cd e) 등은 HTML 상에서 onclick이 없으므로 여기서 dS만 체크
-        if (tR === 'today' && d < tS) return;
+        console.log('Selected Date:', d, 'Today String:', tS, 'Mode:', tR);
+        // [긴급 복구] 오늘부터 모드에서 진짜 과거인 경우만 차단
+        if (tR === 'today' && d < tS) {
+            console.log('Blocked: Past date selection in Today mode');
+            return;
+        }
 
         var idx = mS.indexOf(d);
         if (idx > -1) {
