UI Refinements v3.8: Improved hints, bracketed summary, and tight filter spacing

--- a/css.html
+++ b/css.html
@@ -1812,13 +1812,13 @@
   }
 
   .cdot {
-    width: 13px;
-    height: 13px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 8px;
+    font-size: 10px;
     font-weight: 900;
     color: #fff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
@@ -1829,9 +1829,9 @@
   .cdot.tri {
     width: 0;
     height: 0;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-bottom: 13px solid currentColor;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-bottom: 16px solid currentColor;
     border-radius: 0;
     box-shadow: none;
     filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.15));
@@ -1839,16 +1839,17 @@
     color: #fff;
   }
 
-  /* 세모 안의 숫자를 위한 별도 처리 */
+  /* 세모 안의 숫자를 위한 별도 처리 (V3.8 검은색) */
   .cdot.tri::after {
     content: attr(data-val);
     position: absolute;
-    top: 4px;
+    top: 5px;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 8px;
+    font-size: 10px;
     font-weight: 900;
-    color: #fff;
+    color: #000;
+    /* 지시사항: 추천 숫자는 검은색 */
     z-index: 10;
   }
 
@@ -2037,7 +2038,8 @@
   .fg {
     display: flex;
     align-items: center;
-    gap: 6px;
+    gap: 2px;
+    /* 서로 붙임 */
   }
 
   /* 네비게이션 월별 요약 지표 (심플 텍스트 - 위치 독립적 센터링을 위해 절대좌표 활용) */
