--- a/js-app.html
+++ b/js-app.html
@@ -8285,15 +8285,15 @@ MJ 이정우 팀장
             }
         });
 
-        // 월별 요약 업데이트 (네비게이션 연월 아래 - 컬러 텍스트, 콤마 제거)
+        // 월별 요약 업데이트 (네비게이션 연월 아래 - 컬러 텍스트, 괄호 추가, 밀착)
         var msEl = document.getElementById('cMS');
         if (msEl) {
             msEl.innerHTML =
+                '(' +
                 '<span class="ms-it bid">입찰 ' + (counts_month['입찰'] || 0) + '</span>' +
-                '<span style="width:8px; display:inline-block"></span>' +
-                '<span class="ms-it rec">추천 ' + (counts_month['추천'] || 0) + '</span>' +
-                '<span style="width:8px; display:inline-block"></span>' +
-                '<span class="ms-it chg">변경 ' + (counts_month['변경'] || 0) + '</span>';
+                ' <span class="ms-it rec">추천 ' + (counts_month['추천'] || 0) + '</span>' +
+                ' <span class="ms-it chg">변경 ' + (counts_month['변경'] || 0) + '</span>' +
+                ')';
         }
 
         // 이전/다음달 힌트
