Final Polish v3.9: Fixed summary positioning and blocked empty date selection

--- a/css.html
+++ b/css.html
@@ -2045,7 +2045,8 @@
   /* 네비게이션 월별 요약 지표 (심플 텍스트 - 위치 독립적 센터링을 위해 절대좌표 활용) */
   .cal-ms {
     position: absolute;
-    top: 100%;
+    top: 50px;
+    /* 타이틀 바로 아래로 조정 */
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -2053,7 +2054,6 @@
     align-items: center;
     white-space: nowrap;
     gap: 8px;
-    margin-top: 1px;
     font-size: 0.68rem;
     font-weight: 800;
   }
