--- a/js-app.html
+++ b/js-app.html
@@ -8417,6 +8417,22 @@ MJ 이정우 팀장
      * 날짜 선택 (리스트 앵커로 스크롤)
      */
     function selD(d) {
+        // [지시사항] 물건이 없는 빈 칸은 체크(✓) 되지 않게 함
+        var items = allBiddingData.filter(function (it) {
+            return String(it['in-date'] || '').substring(0, 6) === d;
+        });
+
+        // 필터링된 데이터 중 실제 '입찰', '추천', '변경' 상태인 것이 하나라도 있어야 함
+        var hasTrueItems = items.some(function (it) {
+            var s = it.stu_member || '';
+            return s === '입찰' || s === '추천' || s === '변경';
+        });
+
+        if (!hasTrueItems) {
+            console.log('Selection blocked: No bidding items on', d);
+            return;
+        }
+
         console.log('Selected Date:', d, 'Today String:', tS, 'Mode:', tR);
         // [긴급 복구] 오늘부터 모드에서 진짜 과거인 경우만 차단
         if (tR === 'today' && d < tS) {
