UI Fix v3.10: Corrected summary layout, tightening spacing and shrinking font

--- a/css.html
+++ b/css.html
@@ -1737,12 +1737,14 @@
     position: relative;
   }
 
-  .flex-col-center {
+  /* 타이틀과 요약 그룹 (index.html과 클래스명 일치) */
+  .flex-col {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
+    height: 100%;
   }
 
   .cnb {
@@ -2042,20 +2044,26 @@
     /* 서로 붙임 */
   }
 
-  /* 네비게이션 월별 요약 지표 (심플 텍스트 - 위치 독립적 센터링을 위해 절대좌표 활용) */
+  /* 네비게이션 월별 요약 지표 (심플 텍스트 - 조그맣고 정밀하게) */
   .cal-ms {
     position: absolute;
-    top: 50px;
-    /* 타이틀 바로 아래로 조정 */
+    top: 21px;
+    /* 타이틀(센터) 바로 아래 배치 */
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
     white-space: nowrap;
-    gap: 8px;
-    font-size: 0.68rem;
+    gap: 4px;
+    font-size: 0.65rem;
     font-weight: 800;
+  }
+
+  .ms-it {
+    display: flex;
+    align-items: center;
+    gap: 1px;
   }
 
   .ms-it {
