UI Refinements v3.11: Enlarged navigation title, balanced card padding, and improved recommended item legibility

--- a/css.html
+++ b/css.html
@@ -2202,7 +2202,8 @@
     background: #fff;
     border: 3px solid #e2e8f0;
     border-radius: 14px;
-    padding: 14px;
+    padding: 22px 14px;
+    /* v3.11: 상하 여백 균형 (인라인 스타일 대비) */
     display: flex;
     gap: 8px;
     min-height: 90px;
