--- a/js-app.html
+++ b/js-app.html
@@ -8530,9 +8530,10 @@ MJ 이정우 팀장
         // [수정] 입찰일자 배지: 카드 상단에 딱 붙임 (Flush with top-left)
         var dt = String(i['in-date'] || '');
         var dtLabel = dt.substring(2, 4) + '월 ' + dt.substring(4, 6) + '일';
-        var dtStyle = 'background-color:' + borderCol + '; color:#fff; font-size:0.75rem; padding:2px 10px; border-radius:10px 0 10px 0; font-weight:800; position:absolute; top:0; left:0; z-index:10;';
+        var txtCol = (s === '추천') ? '#000' : '#fff'; // v3.11 지시사항: 추천은 검정색
+        var dtStyle = 'background-color:' + borderCol + '; color:' + txtCol + '; font-size:0.75rem; padding:2px 10px; border-radius:10px 0 10px 0; font-weight:800; position:absolute; top:0; left:0; z-index:10;';
 
-        var h = '<div class="' + cls + '" style="position:relative; padding-top:24px; margin-top:4px;">' +
+        var h = '<div class="' + cls + '" style="position:relative; margin-top:4px;">' +
             '<div class="ic-in-date" style="' + dtStyle + '">' + dtLabel + '</div>' +
             '<div class="ic-l" onclick="showInvestigationDetail(\'' + i.id + '\')">' +
             '<div class="ic-copy-row">' +
