UI Refinements v3.11: Enlarged Month Title by 20% and finalized padding

--- a/css.html
+++ b/css.html
@@ -1766,10 +1766,12 @@
   }
 
   .cal-t {
-    font-size: 1.05rem;
+    font-size: 1.25rem;
+    /* v3.11: 20% 확대 (기존 1.05rem) */
     font-weight: 800;
     color: #1f2937;
-    min-width: 110px;
+    min-width: 140px;
+    /* 글자 크기 증가에 따른 너비 확보 */
     text-align: center;
     line-height: normal;
     /* 상속 영향 제거 */
