Emergency Sync: Pulled manual changes from GAS server

--- a/css.html
+++ b/css.html
@@ -1737,14 +1737,12 @@
     position: relative;
   }
 
-  /* 타이틀과 요약 그룹 (index.html과 클래스명 일치) */
-  .flex-col {
+  .flex-col-center {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
-    height: 100%;
   }
 
   .cnb {
@@ -1766,12 +1764,10 @@
   }
 
   .cal-t {
-    font-size: 1.25rem;
-    /* v3.11: 20% 확대 (기존 1.05rem) */
+    font-size: 1.05rem;
     font-weight: 800;
     color: #1f2937;
-    min-width: 140px;
-    /* 글자 크기 증가에 따른 너비 확보 */
+    min-width: 110px;
     text-align: center;
     line-height: normal;
     /* 상속 영향 제거 */
@@ -2046,26 +2042,20 @@
     /* 서로 붙임 */
   }
 
-  /* 네비게이션 월별 요약 지표 (심플 텍스트 - 조그맣고 정밀하게) */
+  /* 네비게이션 월별 요약 지표 (심플 텍스트 - 위치 독립적 센터링을 위해 절대좌표 활용) */
   .cal-ms {
     position: absolute;
-    top: 21px;
-    /* 타이틀(센터) 바로 아래 배치 */
+    top: 50px;
+    /* 타이틀 바로 아래로 조정 */
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
     white-space: nowrap;
-    gap: 4px;
-    font-size: 0.65rem;
+    gap: 8px;
+    font-size: 0.68rem;
     font-weight: 800;
-  }
-
-  .ms-it {
-    display: flex;
-    align-items: center;
-    gap: 1px;
   }
 
   .ms-it {
@@ -2204,8 +2194,7 @@
     background: #fff;
     border: 3px solid #e2e8f0;
     border-radius: 14px;
-    padding: 22px 14px;
-    /* v3.11: 상하 여백 균형 (인라인 스타일 대비) */
+    padding: 14px;
     display: flex;
     gap: 8px;
     min-height: 90px;
