--- a/js-app.html
+++ b/js-app.html
@@ -8285,15 +8285,15 @@ MJ 이정우 팀장
             }
         });
 
-        // 월별 요약 업데이트 (네비게이션 연월 아래 - 조그맣고 심플하게)
+        // 월별 요약 업데이트 (네비게이션 연월 아래 - 컬러 텍스트, 괄호 추가, 밀착)
         var msEl = document.getElementById('cMS');
         if (msEl) {
             msEl.innerHTML =
-                '( ' +
-                '<span class="ms-it bid">입찰 ' + (counts_month['입찰'] || 0) + '</span> ' +
-                '<span class="ms-it rec">추천 ' + (counts_month['추천'] || 0) + '</span> ' +
-                '<span class="ms-it chg">변경 ' + (counts_month['변경'] || 0) + '</span>' +
-                ' )';
+                '(' +
+                '<span class="ms-it bid">입찰 ' + (counts_month['입찰'] || 0) + '</span>' +
+                ' <span class="ms-it rec">추천 ' + (counts_month['추천'] || 0) + '</span>' +
+                ' <span class="ms-it chg">변경 ' + (counts_month['변경'] || 0) + '</span>' +
+                ')';
         }
 
         // 이전/다음달 힌트
@@ -8530,10 +8530,9 @@ MJ 이정우 팀장
         // [수정] 입찰일자 배지: 카드 상단에 딱 붙임 (Flush with top-left)
         var dt = String(i['in-date'] || '');
         var dtLabel = dt.substring(2, 4) + '월 ' + dt.substring(4, 6) + '일';
-        var txtCol = (s === '추천') ? '#000' : '#fff'; // v3.11 지시사항: 추천은 검정색
-        var dtStyle = 'background-color:' + borderCol + '; color:' + txtCol + '; font-size:0.75rem; padding:2px 10px; border-radius:10px 0 10px 0; font-weight:800; position:absolute; top:0; left:0; z-index:10;';
+        var dtStyle = 'background-color:' + borderCol + '; color:#fff; font-size:0.75rem; padding:2px 10px; border-radius:10px 0 10px 0; font-weight:800; position:absolute; top:0; left:0; z-index:10;';
 
-        var h = '<div class="' + cls + '" style="position:relative; margin-top:4px;">' +
+        var h = '<div class="' + cls + '" style="position:relative; padding-top:24px; margin-top:4px;">' +
             '<div class="ic-in-date" style="' + dtStyle + '">' + dtLabel + '</div>' +
             '<div class="ic-l" onclick="showInvestigationDetail(\'' + i.id + '\')">' +
             '<div class="ic-copy-row">' +
