Precision Scoped Fix v3.14: Finalized Isolated nav bar styles via ID

--- a/css.html
+++ b/css.html
@@ -1735,6 +1735,31 @@
     justify-content: center;
     gap: 12px;
     position: relative;
+    height: 100%;
+  }
+
+  /* v3.14: 특정 네비바 스코프 한정 정밀 정렬 (공통 스타일 flex-col 절대 건들지 않음) */
+  #calNavBar .cal-cv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+    /* 타이틀과 요약 사이의 황금 여백 */
+    height: 100%;
+  }
+
+  #calNavBar .cal-c {
+    gap: 6px;
+    /* 화살표 밀착 */
+  }
+
+  #calNavBar .cnb {
+    background: #f1f5f9;
+    /* 화살표 배경 추가 */
+    width: 32px;
+    height: 32px;
+    color: #4b5563;
   }
 
   .flex-col-center {
@@ -2042,20 +2067,16 @@
     /* 서로 붙임 */
   }
 
-  /* 네비게이션 월별 요약 지표 (심플 텍스트 - 위치 독립적 센터링을 위해 절대좌표 활용) */
-  .cal-ms {
-    position: absolute;
-    top: 50px;
-    /* 타이틀 바로 아래로 조정 */
-    left: 50%;
-    transform: translateX(-50%);
+  /* v3.14: 요약 정보 정밀 수직 안착 (절대좌표 배제) */
+  #calNavBar .cal-ms {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     white-space: nowrap;
-    gap: 8px;
-    font-size: 0.68rem;
+    gap: 6px;
+    font-size: 0.65rem;
     font-weight: 800;
+    line-height: 1;
   }
 
   .ms-it {
