--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                             d="M15 19l-7-7 7-7" />
                                     </svg></button>
-                                <div class="flex-col">
+                                <div class="cal-cv">
                                     <div class="cal-t" id="cT"></div>
                                     <div class="cal-ms" id="cMS"></div>
                                 </div>
