--- a/css.html
+++ b/css.html
@@ -2216,7 +2216,7 @@
     background: #fff;
     border: 3px solid #e2e8f0;
     border-radius: 14px;
-    padding: 14px;
+    padding: 12px 64px;
     display: flex;
     gap: 8px;
     min-height: 90px;
