UI Precision v3.15: Corrected item card padding and restored tab styles

--- a/css.html
+++ b/css.html
@@ -1081,8 +1081,7 @@
     /* 비활성 상태: 더 진하게 조정 (Slate-400) */
     color: #ffffff;
     /* 가독성을 위해 흰색 글자 적용 */
-    padding: 38px 14px 14px !important;
-    /* v3.15: 1:1 대칭 (배지 24px 제외 시 상단 14px / 하단 14px 동일) */
+    padding: 12px 64px;
     /* 가로 크기 확대 유지 */
     border-radius: 12px 12px 0 0;
     /* 상단 라운드 적용, 하단 직각 */
