UI Precision v3.15: Fixed .ic class and applied 1:1 card symmetry

--- a/css.html
+++ b/css.html
@@ -2210,13 +2210,16 @@
     margin: 8px 0 6px;
   }
 
-  /* 물건 카드 — 2열 */
-  padding: 38px 14px 14px !important;
-  /* v3.15: 1:1 대칭 (배지 24px 제외 시 상단 14px / 하단 14px 동일) */
-  display: flex;
-  gap: 8px;
-  min-height: 90px;
-  margin-bottom: 8px;
+  .ic {
+    background: #fff;
+    border: 3px solid #e2e8f0;
+    border-radius: 14px;
+    padding: 38px 14px 14px !important;
+    /* v3.15: 1:1 대칭 (배지 24px 제외 시 상단 14px / 하단 14px 동일) */
+    display: flex;
+    gap: 8px;
+    min-height: 90px;
+    margin-bottom: 8px;
   }
 
   .ic.sb {
